--- a/Metro/Test/SimpleMVVMTest/SimpleMVVMTest.csproj
+++ b/Metro/Test/SimpleMVVMTest/SimpleMVVMTest.csproj
@@ -140,6 +140,7 @@
     <Content Include="Assets\SmallLogo.png" />
     <Content Include="Assets\SplashScreen.png" />
     <Content Include="Assets\StoreLogo.png" />
+    <Content Include="Assets\WideLogo.scale-100.png" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
