- Added BindingTrigger to pass evaluated object onto Action - this is useful for VSM changes. - Change GoToStateAction to use passed parameter as StateName if no state name is supplied.

--- a/Metro/Julmar.Metro.Behaviors/Julmar.Metro.Behaviors.csproj
+++ b/Metro/Julmar.Metro.Behaviors/Julmar.Metro.Behaviors.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Media\StoryboardAction.cs" />
     <Compile Include="Media\StoryboardCompletedTrigger.cs" />
     <Compile Include="Media\StoryboardTrigger.cs" />
+    <Compile Include="Triggers\BindingTrigger.cs" />
     <Compile Include="Triggers\DataTrigger.cs" />
     <Compile Include="Interactivity\DragPositionBehavior.cs" />
     <Compile Include="Actions\GotoStateAction.cs" />
