--- a/Metro/MVVMHelpers.Metro/Julmar.Metro.Helpers.csproj
+++ b/Metro/MVVMHelpers.Metro/Julmar.Metro.Helpers.csproj
@@ -231,7 +231,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="UI\Notifications\Copyright.txt" />
+    <None Include="UI\Notifications\Copyright.txt" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' ">
     <VisualStudioVersion>11.0</VisualStudioVersion>
