Updated 3.5 and 4.0 projects

--- a/Julmar.Wpf.Helpers/Julmar.Core/Julmar.Core (3.5).csproj
+++ b/Julmar.Wpf.Helpers/Julmar.Core/Julmar.Core (3.5).csproj
@@ -85,16 +85,14 @@
     <Compile Include="Concurrency\ReaderWriterLockSlimExtensions.cs" />
     <Compile Include="Extensions\ExceptionExtensions.cs" />
     <Compile Include="Extensions\ObservableObjectExtensions.cs" />
+    <Compile Include="Interfaces\IServiceLocator.cs" />
     <Compile Include="Interfaces\IThreadedNotifyCollection.cs" />
-    <Compile Include="ExportServiceAttribute.cs" />
     <Compile Include="Extensions\CollectionExtensions.cs" />
     <Compile Include="Extensions\ObjectCloner.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="Interfaces\IMessageMediator.cs" />
     <Compile Include="Interfaces\ISupportUndo.cs" />
     <Compile Include="Interfaces\IUndoService.cs" />
-    <Compile Include="Interfaces\IServiceProviderEx.cs" />
-    <Compile Include="Interfaces\IServiceProviderMetadata.cs" />
     <Compile Include="PropertyChangedEventArgsEx.cs" />
     <Compile Include="Services\DynamicComposer.cs" />
     <Compile Include="Services\MessageMediator.cs" />
