--- a/Julmar.Wpf.Helpers/test/C#/TestCompositionWithEmbeddedHash/TestCompositionWithEmbeddedHash.csproj
+++ b/Julmar.Wpf.Helpers/test/C#/TestCompositionWithEmbeddedHash/TestCompositionWithEmbeddedHash.csproj
@@ -39,6 +39,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
