--- a/MvvmHelpers.Portable/Shims/JulMar.PlatformHelpers.Droid/JulMar.PlatformHelpers.Droid.csproj
+++ b/MvvmHelpers.Portable/Shims/JulMar.PlatformHelpers.Droid/JulMar.PlatformHelpers.Droid.csproj
@@ -19,6 +19,7 @@
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
+    <TargetFrameworkVersion>v5.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
