--- a/MvvmHelpers.Portable/PlatformLibs/JulMar.Desktop/JulMar.Desktop.csproj
+++ b/MvvmHelpers.Portable/PlatformLibs/JulMar.Desktop/JulMar.Desktop.csproj
@@ -33,6 +33,7 @@
     <DefineConstants>TRACE;DESKTOP</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\MvvmHelpers.Desktop.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Expression.Interactions, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
