--- a/MvvmHelpers.Portable/PlatformLibs/JulMar.Metro/JulMar.Metro.csproj
+++ b/MvvmHelpers.Portable/PlatformLibs/JulMar.Metro/JulMar.Metro.csproj
@@ -36,6 +36,7 @@
     <DefineConstants>TRACE;NETFX_CORE, WINRT</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\MvvmHelpers.WinRT.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <DebugSymbols>true</DebugSymbols>
