--- a/MvvmHelpers.Portable/PlatformLibs/JulMar.WindowsPhone/JulMar.WindowsPhone.csproj
+++ b/MvvmHelpers.Portable/PlatformLibs/JulMar.WindowsPhone/JulMar.WindowsPhone.csproj
@@ -38,6 +38,7 @@
     <DefineConstants>TRACE;NETFX_CORE;WINDOWS_PHONE_APP</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\MvvmHelpers.WP.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <DebugSymbols>true</DebugSymbols>
