--- a/Julmar.Wpf.Helpers/test/TestMvvmApp/TestMvvmApp.csproj
+++ b/Julmar.Wpf.Helpers/test/TestMvvmApp/TestMvvmApp.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -63,16 +63,13 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Expression.Interactions">
-      <HintPath>..\Dependencies\Microsoft.Expression.Interactions.dll</HintPath>
+    <Reference Include="Microsoft.Xaml.Behaviors, Version=1.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Xaml.Behaviors.Wpf.1.1.39\lib\net45\Microsoft.Xaml.Behaviors.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Windows.Interactivity">
-      <HintPath>..\Dependencies\System.Windows.Interactivity.dll</HintPath>
     </Reference>
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq">
@@ -174,7 +171,7 @@
       <Name>Julmar.Core</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Julmar.Wpf.Behaviors\Julmar.Wpf.Behaviors.csproj">
-      <Project>{E5662DCB-CE30-4AC2-A113-62F070D722B6}</Project>
+      <Project>{e5662dcb-ce30-4ac2-a113-62f070d722b6}</Project>
       <Name>Julmar.Wpf.Behaviors</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Julmar.Wpf.Helpers\Julmar.Wpf.Helpers.csproj">
@@ -184,6 +181,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
